k8s/mafl/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mafl
  labels:
    app: mafl
    app.kubernetes.io/name: mafl
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mafl
      app.kubernetes.io/name: mafl
  template:
    metadata:
      labels:
        app: mafl
        app.kubernetes.io/name: mafl
    spec:
      containers:
        - name: mafl
          image: hywax/mafl:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          volumeMounts:
            - name: config-volume
              mountPath: /app/data/config.yml
              subPath: config.yml
      volumes:
        - name: config-volume
          configMap:
            name: mafl-config
