k8s/mafl/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mafl
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: mafl
    app: mafl
