k8s/mafl/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mafl
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd'
spec:
  rules:
    - host: tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mafl
                port:
                  name: http
  tls:
    - hosts:
        - tryrocket.cloud
      secretName: tryrocket-cloud-production-tls
